logs/Slang/generated/keywords/5.6.2--keyword_timeprecision.sv.log
name: keyword_timeprecision
description: The 'timeprecision' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeprecision.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeprecision.sv:8:8: error: expected declarator
    bit timeprecision;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeprecision.sv:8:22: error: expected time literal
    bit timeprecision;
                     ^
